openshift-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infyora-quote-api
  labels:
    app: infyora-quote-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infyora-quote-api
  template:
    metadata:
      labels:
        app: infyora-quote-api
    spec:
      containers:
        - name: infyora-quote-api
          image: image-registry.openshift-image-registry.svc:5000/azeemroshan111-dev/infyora-quote-api:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: infyora-quote-api-svc
  labels:
    app: infyora-quote-api
spec:
  selector:
    app: infyora-quote-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: infyora-quote-api-route
spec:
  to:
    kind: Service
    name: infyora-quote-api-svc
  port:
    targetPort: 80
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
